<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/squareColor"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:foregroundGravity="center"
            android:onClick="ClickMenu">

            <ImageView
                android:id="@+id/imgList"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_list_24"
                app:tint="@color/menuDisable" />

            <TextView
                android:id="@+id/tvList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/artico_bold"
                android:gravity="center"
                android:text="@string/listview"
                android:textColor="@color/menuDisable"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imgList"
                app:layout_constraintStart_toStartOf="@+id/imgList"
                app:layout_constraintTop_toBottomOf="@+id/imgList" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnMapView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:foregroundGravity="center"
            android:onClick="ClickMenu">

            <ImageView
                android:id="@+id/imgMap"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_map_24"
                app:tint="@color/menuDisable" />

            <TextView
                android:id="@+id/tvMapView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/artico_bold"
                android:text="Maps View"
                android:textColor="@color/menuDisable"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imgMap"
                app:layout_constraintStart_toStartOf="@+id/imgMap"
                app:layout_constraintTop_toBottomOf="@+id/imgMap" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/squareColor"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnClubs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:foregroundGravity="center"
            android:onClick="ClickMenu">

            <ImageView
                android:id="@+id/imgClubs"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/vec_home"
                app:tint="@color/menuDisable" />

            <TextView
                android:id="@+id/tvClubs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/artico_bold"
                android:text="@string/abput"
                android:textColor="@color/menuDisable"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imgClubs"
                app:layout_constraintStart_toStartOf="@+id/imgClubs"
                app:layout_constraintTop_toBottomOf="@+id/imgClubs" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:foregroundGravity="center"
            android:onClick="ClickMenu">

            <ImageView
                android:id="@+id/imgHome"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/event"

                app:tint="@color/menuDisable" />

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/artico_bold"
                android:text="@string/home"
                android:textColor="@color/menuDisable"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imgHome"
                app:layout_constraintStart_toStartOf="@+id/imgHome"
                app:layout_constraintTop_toBottomOf="@+id/imgHome" />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:foregroundGravity="center"
            android:onClick="ClickMenu"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imgAdmin"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_admin_panel_settings_24"
                app:tint="@color/menuDisable" />

            <TextView
                android:id="@+id/tvAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/artico_bold"
                android:gravity="center"
                android:text="@string/admin"
                android:textColor="@color/menuDisable"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imgAdmin"
                app:layout_constraintStart_toStartOf="@+id/imgAdmin"
                app:layout_constraintTop_toBottomOf="@+id/imgAdmin" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:foregroundGravity="center"
            android:onClick="ClickMenu">

            <ImageView
                android:id="@+id/imgLogout"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_logout_24"
                app:tint="@color/menuDisable" />

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/artico_bold"
                android:text="@string/logout"
                android:textColor="@color/menuDisable"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imgLogout"
                app:layout_constraintStart_toStartOf="@+id/imgLogout"
                app:layout_constraintTop_toBottomOf="@+id/imgLogout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutTop">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>